--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,14 +17,14 @@ jobs:
 
       - name: Create zip
         run: |
-          cd custom_components/historical_stats
-          zip historical_stats.zip -r ./
+          cd custom_components
+          zip -r historical_stats.zip historical_stats
 
       - name: Upload zip to release
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./custom_components/historical_stats/historical_stats.zip
+          file: ./custom_components/historical_stats.zip
           asset_name: historical_stats.zip
           tag: ${{ github.ref_name }}
           overwrite: true
