--- a/custom_components/historical_stats/manifest.json
+++ b/custom_components/historical_stats/manifest.json
@@ -1,11 +1,13 @@
 {
   "domain": "historical_stats",
   "name": "Historical statistics",
-  "version": "0.1.0",
-  "documentation": "https://github.com/krissen/historical_stats",
-  "requirements": [],
-  "dependencies": [],
   "codeowners": ["@krissen"],
-  "config_flow": true
+  config_flow: true,
+  "dependencies": [],
+  "documentation": "https://github.com/krissen/historical_stats",
+  "issue_tracker": "https://github.com/krissen/historical_stats/issues",
+  "requirements": [],
+  iot_class: "iot_historical_stats",
+  "version": "2025.6.10"
 }
 
