--- a/custom_components/historical_stats/manifest.json
+++ b/custom_components/historical_stats/manifest.json
@@ -1,15 +1,13 @@
 {
   "domain": "historical_stats",
   "name": "Historical statistics",
-  "content_in_root": true,
-  "integration_type": "hub",
   "codeowners": ["@krissen"],
-  "config_flow": true,
   "dependencies": ["recorder"],
   "documentation": "https://github.com/krissen/historical_stats",
-  "issue_tracker": "https://github.com/krissen/historical_stats/issues",
-  "requirements": [],
+  "integration_type": "hub",
   "iot_class": "local_polling",
-  "version": "2025.6.10"
+  "requirements": [],
+  "issue_tracker": "https://github.com/krissen/historical_stats/issues",
+  "config_flow": true
 }
 
