--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set manifest version
+        run: |
+          python3 scripts/update_version.py "${{ github.ref_name }}"
+
       - name: Create zip
         run: |
           cd custom_components/historical_stats
