--- a/custom_components/historical_stats/manifest.json
+++ b/custom_components/historical_stats/manifest.json
@@ -8,6 +8,7 @@
   "iot_class": "local_polling",
   "requirements": [],
   "issue_tracker": "https://github.com/krissen/historical_stats/issues",
-  "config_flow": true
+  "config_flow": true,
+  "version": "0.0.3-beta1"
 }
 
