fix: default friendly name placeholder

--- a/custom_components/historical_stats/manifest.json
+++ b/custom_components/historical_stats/manifest.json
@@ -9,7 +9,6 @@
   "iot_class": "local_polling",
   "requirements": [],
   "issue_tracker": "https://github.com/krissen/historical_stats/issues",
-  "config_flow": true,
-  "version": "0.0.3-beta1"
+  "config_flow": true
 }
 
